# mini-achiver

./: .gitignore  CMakeLists.txt  Makefile  build.txt  linked_list.c  linked_list.h  mfa.c  mfa_util.c
include/: mfa.h  mfa_compress.h  mfa_encrypt.h  mfa_read.h  mfa_types.h  mfa_util.h  mfa_write.h  util.h
src/: main.c  mfa.c  mfa_compress.c  mfa_encrypt.c  mfa_read.c  mfa_util.c  mfa_write.c  util.c
test/: file1.txt  file2.txt
